fix alignement

--- a/styles.css
+++ b/styles.css
@@ -2891,8 +2891,12 @@ section {
 /* Dense Layers */
 .cnn-dense-group {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 8px;
+}
+
+.cnn-dense-group .cnn-arrow {
+  margin-top: 45px;
 }
 
 .cnn-dense-layer {
